Update title and add favicon in index.html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIGILO OS</title>
+    <link rel="icon" href="icono.png" type="x-png">
+    <title>CIA Secret</title>
     <style>
         body {
             background-color: #000000;
             font-family: 'Lucida Console', 'Courier New', monospace;
             margin: 0;
             padding: 0;
-            /* Usar 100dvh para una mejor compatibilidad con la altura dinámica en móviles */
+            
             height: 100dvh; 
             overflow: hidden;
             display: flex;
@@ -18,7 +19,7 @@
             align-items: center;
         }
 
-        /* --- Pantalla de Login --- */
+        
         #loginScreen {
             text-align: center;
             color: #AAAAAA;
