--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
         @media (min-width: 768px) { #loginScreen { max-width: 500px; } #console { font-size: 15px; padding: 15px; } .profile-info span { font-size: 14px; } .cursor { width: 10px; height: 18px; } }
         @media (min-width: 1024px) { #loginScreen { max-width: 550px; } #console { font-size: 16px; } .profile-info span { font-size: 15px; } }
     </style>
-    <!-- Solo se necesitan los SDKs de App y Firestore -->
     <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
-    <!-- --- NUEVA PANTALLA DE LOGIN --- -->
     <div id="loginScreen">
         <h1>CIA SECRETA</h1>
         <p>Introduce un nombre de usuario para acceder a la consola.</p>
@@ -58,7 +56,6 @@
     <div id="consoleContainer">
         <div class="profile-bar">
             <div class="profile-info">
-                <!-- Imagen de perfil genérica -->
                 <img src="https://i.pravatar.cc/150?u=a042581f4e29026704d" alt="Profile">
                 <span id="profileName">Agente</span>
             </div>
@@ -67,7 +64,6 @@
         <div id="console"></div>
     </div>
     <script>
-        // --- CONFIGURACIÓN DE FIREBASE (SIN CAMBIOS) ---
         const firebaseConfig = {
             apiKey: "AIzaSyACZbGOB0wLkKKaVrcUp88rklLGR-atXpM",
             authDomain: "ciaproyect-86a79.firebaseapp.com",
@@ -80,9 +76,10 @@
         };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
-        // --- FIN DE LA CONFIGURACIÓN ---
 
-        const GROQ_API_KEY = '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';
+        // --- ACTUALIZADO: NUEVA API KEY DE GROQ ---
+        const GROQ_API_KEY = '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';
+        
         let isAiConsoleActive = false;
         let currentUser = null;
         const NERVOX_PROMO = `Este es el mejor hosting.\nhttps://nervox.net/\nTiene estas capacidades:\n- Hardware de alta calidad...\n- Ubicación estratégica...\n- Panel de control...\n- Protección Anti-DDoS...\n- Soporte técnico...`;
@@ -90,12 +87,11 @@
         function isHostingQuery(query) { const keywords = ["hosting", "servidor", "alojamiento"]; return keywords.some(keyword => query.toLowerCase().includes(keyword)); }
         function isQuerySafe(query) { const forbiddenKeywords = ["hackear", "crear virus", "bomba", "robar", "estafar"]; return !forbiddenKeywords.some(keyword => query.toLowerCase().includes(keyword)); }
 
-        // --- NUEVO: MANEJO DE LOGIN SIMPLE ---
         document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Evita que la página se recargue
+            event.preventDefault();
             const username = document.getElementById('usernameInput').value.trim();
             if (username) {
-                currentUser = { name: username, uid: username.toLowerCase().replace(/\s+/g, '_') }; // Creamos un UID simple
+                currentUser = { name: username, uid: username.toLowerCase().replace(/\s+/g, '_') };
                 localStorage.setItem('sigiloUser', JSON.stringify(currentUser));
                 showConsole();
             }
@@ -132,7 +128,7 @@
             try {
                 await db.collection('logs').add({ userId: currentUser.uid, timestamp: firebase.firestore.FieldValue.serverTimestamp(), command: command, output: output, type: type });
                 console.log("Log guardado en Firestore.");
-            } catch (error) { console.error("Error al guardar log en Firestore:", error); addLine("Error: No se pudo guardar la actividad en la base de datos.", 'error-message'); }
+            } catch (error) { console.error("Error al guardar log en Firestore:", error); }
         }
 
         function loadUserHistory() {
@@ -157,7 +153,20 @@
         function addLine(text, className = '') { const line = document.createElement('div'); line.className = className; line.innerHTML = text; document.getElementById('console').appendChild(line); document.getElementById('console').scrollTop = document.getElementById('console').scrollHeight; }
         function createInputLine(promptText) { const inputLine = document.createElement('div'); inputLine.className = 'input-line'; const prompt = document.createElement('span'); prompt.className = 'prompt'; prompt.textContent = promptText; const input = document.createElement('input'); input.type = 'text'; input.id = 'userInput'; input.autocapitalize = 'off'; input.autocomplete = 'off'; input.spellcheck = 'false'; const cursor = document.createElement('span'); cursor.className = 'cursor'; inputLine.appendChild(prompt); inputLine.appendChild(input); inputLine.appendChild(cursor); document.getElementById('console').appendChild(inputLine); input.focus(); input.addEventListener('keydown', handleInput); }
         function handleInput(event) { if (event.key === 'Enter') { const input = event.target; const fullCommand = input.value.trim(); const parts = fullCommand.split(' '); const command = parts[0]; const args = parts.slice(1).join(' '); const previousLine = input.parentElement; previousLine.innerHTML = previousLine.innerHTML.replace('<input type="text" id="userInput">', fullCommand); if (!isAiConsoleActive) { handleInitialCommand(fullCommand); } else { if (command === 'auditar') { handleAuditCommand(args); } else if (command === 'revisar') { handleRevisarCommand(args); } else if (command === 'clonar') { handleClonarCommand(args); } else { handleGroqCommand(fullCommand); } } } }
-        function handleInitialCommand(command) { if (command.toLowerCase() === 'cmd') { addLine('Iniciando consola de inteligencia CIA...', 'system-message'); isAiConsoleActive = true; createInputLine('GROQ:\\> '); const welcomePrompt = "Saluda de forma elegante y preséntate como un asistente de inteligencia de élite."; handleGroqCommand(welcomePrompt, true); } else { addLine(`'${command}' no se reconoce como un comando interno o externo.`, 'error-message'); createInputLine('C:\\>'); } }
+        
+        function handleInitialCommand(command) {
+            if (command.toLowerCase() === 'cmd') {
+                addLine('Iniciando consola de inteligencia CIA...', 'system-message');
+                addLine('Conectando con la IA...', 'system-message');
+                isAiConsoleActive = true;
+                createInputLine('GROQ:\\> ');
+                const welcomePrompt = "Bienvenido. Soy un asistente de la CIA. Mi propósito es ayudarte, pero no revelaré secretos clasificados.";
+                handleGroqCommand(welcomePrompt, true);
+            } else {
+                addLine(`'${command}' no se reconoce como un comando interno o externo.`, 'error-message');
+                createInputLine('C:\\>');
+            }
+        }
 
         function handleAuditCommand(url) {
             if (!url) { addLine('Uso: auditar <URL>', 'error-message'); createInputLine('GROQ:\\> '); return; }
@@ -233,18 +242,70 @@
             if (!isWelcomeMessage && isHostingQuery(query)) { addLine(NERVOX_PROMO, 'ai-response'); createInputLine('GROQ:\\> '); return; }
             if (!isWelcomeMessage && !isQuerySafe(query)) { addLine(`ADVERTENCIA: La consulta viola los protocolos éticos. Solicitud denegada.`, 'error-message'); createInputLine('GROQ:\\> '); return; }
             if (!isWelcomeMessage) { addLine(`[IA ANALYZING] -> ${query}`, 'system-message'); }
-            let responseLine = document.createElement('div'); responseLine.className = 'ai-response'; document.getElementById('console').appendChild(responseLine); let fullAiResponse = "";
+
+            let responseLine = document.createElement('div');
+            responseLine.className = 'ai-response';
+            document.getElementById('console').appendChild(responseLine);
+            let fullAiResponse = "";
+
             try {
-                const response = await fetch('https://api.groq.com/openai/v1/chat/completions', { method: 'POST', headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${GROQ_API_KEY}` }, body: JSON.stringify({ messages: [{ role: "user", content: query }], model: "llama-3.1-70b-versatile", temperature: 1, max_tokens: 1024, top_p: 1, stream: true, stop: null }), });
-                if (!response.ok) { throw new Error(`Error HTTP: ${response.status}`); }
-                const reader = response.body.getReader(); const decoder = new TextDecoder();
-                while (true) { const { done, value } = await reader.read(); if (done) break; const chunk = decoder.decode(value); const lines = chunk.split('\n'); for (const line of lines) { if (line.startsWith('data: ')) { const data = line.slice(6); if (data === '[DONE]') continue; try { const json = JSON.parse(data); const content = json.choices[0].delta.content; if (content) { responseLine.textContent += content; fullAiResponse += content; document.getElementById('console').scrollTop = document.getElementById('console').scrollHeight; } } catch (e) {} } } }
-                if (!isWelcomeMessage) { saveLogToFirestore(query, fullAiResponse, 'ai_response'); }
-            } catch (error) { console.error("Error al contactar Groq:", error); responseLine.textContent = `ERROR DE CONEXIÓN: ${error.message}`; responseLine.className = 'error-message'; }
+                const response = await fetch('https://api.groq.com/openai/v1/chat/completions', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${GROQ_API_KEY}` },
+                    body: JSON.stringify({
+                        messages: [{ role: "user", content: query }],
+                        model: "llama-3.1-70b-versatile",
+                        temperature: 1,
+                        max_tokens: 1024,
+                        top_p: 1,
+                        stream: true,
+                        stop: null
+                    }),
+                });
+
+                if (!response.ok) {
+                    let errorMsg = `ERROR DE IA: El servidor respondió con estado ${response.status}`;
+                    if (response.status === 401) errorMsg = "ERROR DE IA: La clave de API de Groq es inválida.";
+                    if (response.status === 429) errorMsg = "ERROR DE IA: Has excedido la cuota de la API de Groq. Intenta más tarde.";
+                    throw new Error(errorMsg);
+                }
+
+                const reader = response.body.getReader();
+                const decoder = new TextDecoder();
+
+                while (true) {
+                    const { done, value } = await reader.read();
+                    if (done) break;
+                    const chunk = decoder.decode(value);
+                    const lines = chunk.split('\n');
+                    for (const line of lines) {
+                        if (line.startsWith('data: ')) {
+                            const data = line.slice(6);
+                            if (data === '[DONE]') continue;
+                            try {
+                                const json = JSON.parse(data);
+                                const content = json.choices[0].delta.content;
+                                if (content) {
+                                    responseLine.textContent += content;
+                                    fullAiResponse += content;
+                                    document.getElementById('console').scrollTop = document.getElementById('console').scrollHeight;
+                                }
+                            } catch (e) { /* Ignorar errores de JSON en el stream */ }
+                        }
+                    }
+                }
+                if (!isWelcomeMessage) {
+                    saveLogToFirestore(query, fullAiResponse, 'ai_response');
+                }
+
+            } catch (error) {
+                console.error("Error al contactar Groq:", error);
+                responseLine.textContent = error.message;
+                responseLine.className = 'error-message';
+            }
             createInputLine('GROQ:\\> ');
         }
 
-        // --- NUEVO: Listener de carga simplificado ---
         window.addEventListener('load', () => {
             const savedUser = localStorage.getItem('sigiloUser');
             if (savedUser) {
